# jupyterlite-ai-kernels

./: .copier-answers.yml  .gitignore  CHANGELOG.md  README.md  RELEASE.md  install.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml  deploy.yml  prep-release.yml  publish-release.yml
demo/: README.md  pyproject.toml
jupyterlite_ai_kernels/: __init__.py
src/: ai-kernel.ts  icons.ts  index.ts  kernel-manager.ts  tools.ts
